--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,17 +56,26 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
+    // lifecycle
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+    implementation "androidx.compose.runtime:runtime-livedata:1.3.3"
 
+    // Dagger hilt
     implementation "com.google.dagger:hilt-android:2.45"
     kapt 'com.google.dagger:hilt-android-compiler:2.45'
     kapt "androidx.hilt:hilt-compiler:1.0.0"
 
+    // datastore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    // google fit
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
+    implementation 'com.google.android.gms:play-services-fitness:21.1.0'
 }
